crates/biome_cli/tests/snapshots/main_commands_format/applies_configuration_from_biome_jsonc.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.js
```

## `biome.jsonc`

```json
{
  // Formatting options
  "formatter": {
    "lineWidth": 10,
    "indentStyle": "space",
    "indentWidth": 8
  }
}
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
