crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_arrow_parentheses.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --arrow-parentheses as-needed --write file.js
```

## `file.js`

```js
action => {};
action => {};
({ action }) => {};
([action]) => {};
(...action) => {};
(action = 1) => {};

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
