crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_bracket_spacing.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --bracket-spacing false --write file.js
```

## `file.js`

```js
import {Foo} from "bar";
let foo = {a, b};
const {a, b} = foo;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
