crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_bracket_spacing_graphql.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --bracket-spacing false --write file.graphql
```

## `file.graphql`

```graphql
{
	field_value(object_value: {key: "value"})
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
