crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_configuration.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --line-width 10 --indent-style space --indent-width 8 --write file.js
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
