crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --line-width 10 --indent-style space --indent-width 8 --write file.js
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentWidth": 6
  }
}
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
