crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file_issue_3175_v1.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --javascript-formatter-quote-style single file.js
```

## `biome.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 120
  }
}
```

## `file.js`

```js
import React from 'react';

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
