crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file_issue_3175_v2.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --indent-style space file.js
```

## `biome.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "single"
    }
  }
}
```

## `file.js`

```js
function f() {
  return 'hey';
}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
