crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_css_quote_style.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.css`

```css
[class='foo'] {
	background-image: url('/path/to/file.jpg');
}

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


