crates/biome_cli/tests/snapshots/main_commands_format/applies_custom_jsx_quote_style.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --jsx-quote-style single --quote-properties preserve --write file.jsx
```

## `file.jsx`

```jsx
<div bar='foo' baz={"foo"} />;

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
